--- a/templates/register.html
+++ b/templates/register.html
@@ -25,14 +25,16 @@
     <main class="contain">
         <div class="row">
 
-            <div class="col-8 bgIMG"></div>
+            <div class="col-sm-8">
+                <img src="/Discount/_img/bgIMG.jpg" alt="" class="w-100">
+            </div>
 
-            <div class="col-4">
+            <div class="col-sm-4">
 
                 <div class="row-12">
                     <span id="pageNember" class="float-right">1/2</span>
                     <div class="formPad">
-                        <div>
+                        
                             <!----------------PAGE ONE------------------------>
                             <div id="pageOne">
                                 <div class="form-group row justify-content-center">
@@ -59,7 +61,7 @@
                                     <input type="text" class="form-control" id="dob" placeholder="Ημ. Γέννησης">
                                 </div>
                                 <div class="form-group">
-                                    <button class="btn btn-primary roundButton clicked float-right">Επόμενο</button>
+                                    <button class="btn btn-primary roundButton next float-right">Επόμενο</button>
                                 </div>
                             </div>
 
@@ -82,11 +84,13 @@
                                         placeholder="Επαλήθευση Κωδικού">
                                 </div>
                                 <div class="form-group">
-                                    <button id="backBTN" class="btn btn-primary roundButton clicked float-left bg-info">Πίσω</button>
+                                    <button id="backBTN"
+                                        class="btn btn-primary roundButton back float-left bg-info">Πίσω</button>
                                 </div>
                                 <div class="form-group">
                                     <a href="home.html">
-                                        <button class="btn btn-primary roundButton clicked float-right">Δημιουργία</button>
+                                        <button
+                                            class="btn btn-primary roundButton float-right">Δημιουργία</button>
                                     </a>
                                 </div>
                             </div>
@@ -101,11 +105,11 @@
 
     <footer>
         <div class="row">
-            <div class="col-6">
-                <span class="labelFill">Copyright ©2020 All rights reserved!</span>
+            <div class="col-sm-6">
+                <span class="labelFill centered">Copyright ©2020 All rights reserved!</span>
             </div>
-            <div class="col-6">
-                <span class="labelFill float-right">Terms & Conditions | Register | Privacy</span>
+            <div class="col-sm-6">
+                <span class="labelFill float-right centered">Terms & Conditions | Register | Privacy</span>
 
             </div>
         </div>
